# hackathon-receipt-sorter

./: .gitignore  App.py  Dockerfile  README.md  agents.py  app.py  main.py  pyproject.toml  requirements.txt  sample_receipt.txt  tasks.py  tools.py  tools.py hackathon project.py
