[project]
name = "hackathon-receipt-sorter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "crewai>=1.15.1",
    "crewai-tools>=1.15.1",
    "gradio>=6.19.0",
    "litellm>=1.91.0",
    "pdfplumber>=0.11.10",
    "pillow>=12.3.0",
    "pytesseract>=0.3.13",
    "python-dotenv>=1.2.2",
]
